--- a/src/css/partials/sections/_rated.scss
+++ b/src/css/partials/sections/_rated.scss
@@ -137,6 +137,7 @@
     }
 
     &__btn {
+      margin-top: auto;
       padding-block: 10px;
       font-weight: 600;
       font-size: 16px;
